use Integer.valueOf() instead of new Integer(String)